[Re-factored] refactored line diff.